--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -194,8 +194,7 @@ a.tp_link img:hover
 {
     clear: both;
     width: 800px;
-    padding-left: 20px;
-    padding-right: 50px;
+    padding: 20px 110px 20px 40px;
     background-image: url("../../images/ja/topics3/background2.png");
 }
 
