--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -6,11 +6,11 @@
     font-weight: 400;
     color: #020202;
     font-size: inherit;
-    min-height: 740px;
-    padding-bottom: 60px;
-    background-image: url("../../images/ja/topics3/asobi_Background1.jpg");
+    /*min-height: 740px;*/
+    padding-bottom: 30px;
+    /*background-image: url("../../images/ja/topics3/asobi_Background1.jpg");
     background-repeat: no-repeat;
-    background-position: -20px 223px;
+    background-position: -20px 223px;*/
 }
 
 h2
@@ -31,6 +31,13 @@ img#tp_Kanban
     position: relative;
     left: -30px;
     top: -32px;
+}
+
+div#tp_default
+{
+    background-image: url("../../images/ja/topics3/background2.jpg");
+    background-repeat: no-repeat;
+    background-position: -20px 223px;
 }
 
 ul
@@ -193,7 +200,7 @@ a.tp_link img:hover
 #articles_detail
 {
     clear: both;
-    width: 800px;
+    width: 720px;
     padding: 20px 110px 20px 40px;
     background-image: url("../../images/ja/topics3/background2.png");
 }
