--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -35,7 +35,7 @@ img#tp_Kanban
 
 div#tp_default
 {
-    background-image: url("../../images/ja/topics3/background2.jpg");
+    background-image: url("../../images/ja/topics3/background1.png");
     background-repeat: no-repeat;
     background-position: -20px 223px;
 }
