topics3 bg test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6661 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -37,7 +37,7 @@ div#tp_default
 {
     background-image: url("../../images/ja/topics3/background1.png");
     background-repeat: no-repeat;
-    background-position: -20px 223px;
+    /*background-position: -20px 223px;*/
 }
 
 ul
