topics3 bg test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6662 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -37,7 +37,15 @@ div#tp_default
 {
     background-image: url("../../images/ja/topics3/background1.png");
     background-repeat: no-repeat;
+    min-height: 
     /*background-position: -20px 223px;*/
+}
+
+div#tp_default:after
+{
+     content: "";
+     display: block;
+     clear: both; 
 }
 
 ul
