--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -37,7 +37,9 @@ div#tp_default
 {
     background-image: url("../../images/ja/topics3/background1.png");
     background-repeat: no-repeat;
-    min-height: 
+    width: 100%;
+    margin: 0;
+    padding: 0px auto 0px 20px;
     /*background-position: -20px 223px;*/
 }
 
@@ -208,7 +210,8 @@ a.tp_link img:hover
 #articles_detail
 {
     clear: both;
-    width: 720px;
+    width: 730px;
+    margin: 0;
     padding: 20px 110px 20px 40px;
     background-image: url("../../images/ja/topics3/background2.png");
 }
