--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -114,7 +114,7 @@ ul
     width: 370px;
     padding: 0;
     margin: 10px;
-    margin-bottom: 168px;
+    /*margin-bottom: 168px;*/
 }
 
 #articles_intro li
@@ -169,7 +169,7 @@ div.tp_LInk
     text-align: center;
     position: absolute;
     right: 30px;
-    bottom: 10px;
+    bottom: 5px;
     width: 166px;
     height: 168px;
 }
