--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -172,6 +172,7 @@ div.tp_LInk
     bottom: 5px;
     width: 166px;
     height: 168px;
+    background-image:  url("../../images/ja/topics3/link.png");
 }
 
 div.tp_LInk p
@@ -196,7 +197,7 @@ div.tp_LInk img
 {
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: 2;
 }
 
 a.tp_link img
