--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -173,6 +173,8 @@ a.tp_link
     width: 166px;
     height: 168px;
     background-image:  url("../../images/ja/topics3/link.png");
+    background-position: left top:
+    background-repeat: no-repeat;
 }
 
 a.tp_link p
@@ -195,8 +197,8 @@ a.tp_link:hover
 
 a.tp_link img 
 {
-    width: 100%;
-    height: 100%;
+    width: 166px;
+    height: 168px;
     z-index: 2;
     filter:alpha(opacity=75);
     -moz-opacity: 0.75;
