topics link onmouse test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6685 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -173,7 +173,7 @@ a.tp_link
     width: 166px;
     height: 168px;
     background-image:  url("../../images/ja/topics3/link.png");
-    background-position: right bottom:
+    background-position: left top:
     background-repeat: no-repeat;
     filter:alpha(opacity=75);
     -moz-opacity: 0.75;
