--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -66,7 +66,7 @@ ul
 {
     width: 340px;
     float: left;
-    margin: 10px 10px 0px 20px;
+    margin: 10px 10px 20px 20px;
     padding: 0;
 }
 
@@ -107,6 +107,14 @@ ul
 #articles_title li a span /* ¶µ°÷Ì¾ */
 {
     clear: left;
+}
+
+div#vertical_border
+{
+    height: 820px;
+    width: 0px;
+    float: left;
+    border-left: dashed 1px;
 }
 
 #articles_intro{
