topics vertical_border
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6687 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -111,10 +111,10 @@ ul
 
 div#vertical_border
 {
-    height: 820px;
+    height: 420px;
     width: 0px;
     float: left;
-    border-left: dashed 1px;
+    border-left: dashed 1px tan;
 }
 
 #articles_intro{
