topics vertical_border
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6688 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -106,12 +106,14 @@ ul
 
 #articles_title li a span /* ¶µ°÷Ì¾ */
 {
+    color: inherit;
     clear: left;
 }
 
 div#vertical_border
 {
-    height: 420px;
+    margin-top: 20px;
+    height: 400px;
     width: 0px;
     float: left;
     border-left: dashed 1px tan;
