topics color test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6689 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -95,7 +95,7 @@ ul
 #articles_title li a:hover
 {
     text-decoration: none;
-    color: inherit;
+    color: #020202;
 }
 
 #articles_title li a h2 /* コース名 */
