topics css h1 line-height
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6691 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -13,10 +13,14 @@
     background-position: -20px 223px;*/
 }
 
+h1
+{
+    line-height: 150%;
+}
+
 h2
 {
     color: #cc6699;
-    line-height: 150%;
 }
 
 img#tp_door
