--- a/css/topics_branches/3.css
+++ b/css/topics_branches/3.css
@@ -15,6 +15,12 @@ ul#topics{
     border: 1px solid #ff0000;
 }
 
+img.sample{
+position: absolute;
+top:200px;
+left:200px;
+}
+
 /*
 p.title {
     background-color: #FFFFFF;
