中津川画像変更2/23
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6742 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -1,25 +1,29 @@
-img#img1{
-width: 320px;
-height: 200px;
-margin: 0 200px;
+img#img1 {
+    height: 194px;
+    margin: 50px 32px 0 0;
+    width: 278px;
+    float: right;
 }
 
-img#img2{
-width: 320px;
-height: 200px;
-margin: 0 200px;
+img#img2 {
+    height: 198px;
+    margin: 100px -279px 0px 10px;
+    width: 279px;
+    float: right;
 }
 
-img#img3{
-width: 320px;
-height: 400px;
-margin: 0 200px;
+img#img3 {
+    height: 400px;
+    margin: -111px 0px;
+    width: 320px;
+    float: right;
 }
 
-img#img4{
-    width: 250px;
-    height: 180px;
-    position: absolute;
-    top: 20px;
+img#img4 {
+    height: 194px;
     left: 600px;
+    width: 278px;
+    float: right;
+    position: absolute;
+    top: 60px;
 }
