中津川画像変更2/23
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6743 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -13,10 +13,10 @@ img#img2 {
 }
 
 img#img3 {
-    height: 400px;
-    margin: -111px 0px;
-    width: 320px;
     float: right;
+    height: 330px;
+    margin: 65px -285px 0px 20px;
+    width: 273px;
 }
 
 img#img4 {
