中津川画像変更2/23
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6748 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/project_nakatsugawa.css
+++ b/css/project_nakatsugawa.css
@@ -27,3 +27,10 @@ img#img4 {
     position: absolute;
     top: 60px;
 }
+
+img#img5 {
+    height: 198px;
+    margin: 100px -279px 0px 10px;
+    width: 279px;
+    float: right;
+}
