--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -133,12 +133,6 @@ div#vertical_border
 }
 
 
-#articles_intro li
-{
-    height: 400px;
-    position: relative;
-}
-
 
 #intro1,#intro2,#intro3,#intro4,#intro5,#intro6
 {
@@ -185,16 +179,17 @@ a.tp_link
     clear: both;
     text-align: center;
     position: absolute;
-    right: 30px;
+    right: 150px;
     bottom: 5px;
     width: 166px;
     height: 168px;
-    background-image:  url("../../images/ja/topics3/link.png");
+    background-image:  url("../../images/ja/topics3/link.gif");
     background-position: left top:
     background-repeat: no-repeat;
     filter:alpha(opacity=100);
     -moz-opacity: 1;
     opacity: 1;
+top: 480px;
 }
 
 a.tp_link p
