遊び体験：画像追加
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6776 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -183,7 +183,7 @@ a.tp_link
     bottom: 5px;
     width: 166px;
     height: 168px;
-    background-image:  url("../../images/ja/topics3/link.gif");
+    background-image:  url("../../images/ja/topics3/link.png");
     background-position: left top:
     background-repeat: no-repeat;
     filter:alpha(opacity=100);
