--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -234,7 +234,7 @@ a.tp_link:hover
     background-image: url("../../images/ja/topics3/background2.png");
 }
 
-#detail1,#detail2,#detail3,#detail4,#detail5,#detail6
+#detail1,#detail2,#detail3,#detail4,#detail5,#detail6,#detail7,#detail8,#detail9,#detail10,#detail11,#detail12
 {
     display: none;
 }
