topics4 css test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6868 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -147,7 +147,7 @@ div#vertical_border
     display: none;
     margin: 0;
     padding: 0;
-    width: 90%;
+    width: 310px;
 /*    position: absolute;
     bottom: 0;*/
 }
