--- a/css/topics/topics_common.css
+++ b/css/topics/topics_common.css
@@ -6,11 +6,7 @@
     font-weight: 400;
     color: #020202;
     font-size: inherit;
-    /*min-height: 740px;*/
     padding-bottom: 30px;
-    /*background-image: url("../../images/ja/topics3/asobi_Background1.jpg");
-    background-repeat: no-repeat;
-    background-position: -20px 223px;*/
 }
 
 h1
@@ -91,8 +87,8 @@ ul
 #articles_title li a
 {
     display: block;
-    width: 100%;
-    height: 75px;
+/*    width: 100%;
+    height: 75px; */
     padding: 0;
 }
 
