--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -5,6 +5,13 @@
 
 #articles_title li 
 {
-    width: 340px;
+    height: 90px;
+    width: 350px;
     float: left;
+}
+
+#articles_title li a
+{
+    width: 100%;
+    height: 85px;
 }
