--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -10,24 +10,18 @@
     float: left;
 }
 
-#articles_title li:before
-{
-    content:"o";
-}
-
-#articles_title li:hover
-{
-    content:"";
-    text-decoration: underline;
-}
-
-#articles_title li:hover:before
-{
-    content:"v";
-}
-
 #articles_title li a
 {
     width: 100%;
     height: 85px;
+}
+
+#articles_title li:hover
+{
+    text-decoration: underline;
+}
+
+#articles_title li span
+{
+    text-decoration: none;
 }
