topics4 css test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6891 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -16,12 +16,13 @@
     height: 85px;
 }
 
-#articles_title li:hover
+#articles_title li a:hover
 {
     text-decoration: underline;
+    color: #cc6699;
 }
 
-#articles_title li span
+#articles_title li a span
 {
     text-decoration: none;
 }
