--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -24,6 +24,6 @@
 
 #articles_title li a span
 {
-    text-decoration: none important;
+    text-decoration: none !important;
     color: #030303 !important;
 }
