--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -27,3 +27,9 @@
     text-decoration: none !important;
     color: #030303 !important;
 }
+
+#articles_title li a span:hover
+{
+    text-decoration: none !important;
+    color: #030303 !important;
+}
