topics4 border css test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6895 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -18,18 +18,12 @@
 
 #articles_title li a:hover
 {
-    text-decoration: underline;
+/*    text-decoration: underline;*/
     color: #cc6699;
+    border-bottom: solid 2px #cc6699;
 }
 
 #articles_title li a span
 {
-    text-decoration: none !important;
-    color: #030303 !important;
-}
-
-#articles_title li a span:hover
-{
-    text-decoration: none !important;
     color: #030303 !important;
 }
