--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -1,12 +1,12 @@
 #articles_title
 {
-    width: 700px;
+    width: 740px;
 }
 
 #articles_title li 
 {
     height: 90px;
-    width: 350px;
+    width: 370px;
     float: left;
 }
 
@@ -14,17 +14,30 @@
 {
     width: 100%;
     height: 85px;
+    margin-left: 20px;
+    background-image: url("./images/ja/topics4/check_off.png");
 }
 
 #articles_title li a:hover
 {
-/*    text-decoration: underline;*/
+    background-image: url("./images/ja/topics4/check.png");
+    text-decoration: none;
     color: #cc6699;
-    border-bottom: solid 2px #cc6699;
+/*    border-bottom: solid 2px #cc6699;*/
+}
+
+#articles_title li a h2
+{
+    font-weight: bold;
 }
 
 #articles_title li a span
 {
     text-decoration: none !important;
     color: #030303 !important;
+}
+
+#articles_title li a *
+{
+    vertical-align: bottom;
 }
