--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -14,13 +14,15 @@
 {
     width: 100%;
     height: 85px;
-    margin-left: 20px;
-    background-image: url("../../images/ja/topics4/check_off.png");
+    padding-left: 20px;
+    background-image: url("../../images/ja/topics4/check_off.png")
+    background-repeat: no-repeat;
 }
 
 #articles_title li a:hover
 {
     background-image: url("../../images/ja/topics4/check.png");
+    background-repeat: no-repeat;
     text-decoration: none;
     color: #cc6699;
 /*    border-bottom: solid 2px #cc6699;*/
