--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -1,22 +1,24 @@
 #articles_title
 {
-    width: 740px;
+    width: 790px;
 }
 
 #articles_title li 
 {
     height: 90px;
-    width: 370px;
+    width: 390px;
     float: left;
+    margin-right: 5px;
 }
 
 #articles_title li a
 {
     width: 100%;
     height: 85px;
-    padding-left: 20px;
-    background-image: url("../../images/ja/topics4/check_off.png")
+    padding-left: 30px;
+    background-image: url("../../images/ja/topics4/check_off.png");
     background-repeat: no-repeat;
+    background-position: 0px 40px;
 }
 
 #articles_title li a:hover
