topics4 名前-所属 順序入れ替え
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6905 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -40,7 +40,17 @@
     color: #030303 !important;
 }
 
+#articles_title li a span.st_name
+{
+    font-size: large;
+}
+
+#articles_title li a span.st_belong:before
+{
+    content:"¡ü";
+}
+
 #articles_title li a *
 {
-    vertical-align: bottom;
+    vertical-align: text-bottom;
 }
