topics4 名前-所属 順序入れ替え
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6906 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -42,12 +42,13 @@
 
 #articles_title li a span.st_name
 {
-    font-size: large;
+    font-size: 110%;
 }
 
 #articles_title li a span.st_belong:before
 {
     content:"¡ü";
+    color: gray;
 }
 
 #articles_title li a *
