topics4 css bg test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6929 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -11,6 +11,7 @@ ul#articles_title
     padding: 100px 0px 0px 30px;
     width: 840px;
     background-image: url("../../images/ja/topics4/background1.png");
+    z-index: 3;
 }
 
 ul#articles_title li 
@@ -70,8 +71,9 @@ ul#articles_detail
 {
     position: relative;
     top: -80px;
-    margin-top: 150px;
+    margin-top: 200px;
     background-image: url("../../images/ja/topics4/background2.png");
+    z-index: 1;
 }
 
 ul#articles_detail li h1
