topics4 css bg test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6935 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -70,7 +70,7 @@ ul#articles_detail
 {
     position: relative;
     top: -85px;
-    margin-top: 500px;
+    padding-top: 500px;
     background-image: url("../../images/ja/topics4/background2.png");
 }
 
