--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -70,6 +70,7 @@ ul#articles_title li a *
 
 ul#articles_detail
 {
+    width: 840px;
     display: none;
     position: relative;
     top: -145px;
