topics4 css bg test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6942 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -70,13 +70,14 @@ ul#articles_title li a *
 
 ul#articles_detail
 {
-    width: 840px;
+    width: 740px;
     display: none;
     position: relative;
     top: -145px;
     padding-top: 100px;
     margin-right: 30px;
     background-image: url("../../images/ja/topics4/background2.png");
+    background-repeat: no-repeat;
     background-position: top right;
 }
 
