--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -9,7 +9,7 @@ ul#articles_title
 {
     margin: 0px 10px 10px 0px;
     padding: 100px 0px 120px 30px;
-    width: 840px;
+    width: 740px;
     background-image: url("../../images/ja/topics4/background1.png");
     background-repeat: no-repeat;
     background-position: top left;
@@ -90,4 +90,23 @@ ul#articles_detail li h1
 ul#articles_detail li h1:before
 {
     content:"¡ü";   
+}
+
+ul#articles_detail li p
+{
+    width:350px;
+    float: left;
+}
+
+ul#articles_detail li p.comment
+{
+    width: 200px;
+    height: 100px;
+    background-image: url(../../images/ja/topics4/hukidashi.png);
+    background-position: center center;
+}
+
+ul#articles_detail img
+{
+    float: left;
 }
