topics4 articles_detail
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6944 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -106,7 +106,7 @@ ul#articles_detail li p.comment
     background-position: center center;
 }
 
-ul#articles_detail img
+ul#articles_detail li img
 {
     float: left;
 }
