--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -94,16 +94,18 @@ ul#articles_detail li h1:before
 
 ul#articles_detail li p
 {
-    width:350px;
+    width:300px;
     float: left;
+    margin: 10px;
 }
 
 ul#articles_detail li p.comment
 {
     width: 234px;
     height: 155px;
-    padding: 15px;
+    padding: 25px 15px 15px 15px;
     background-image: url(../../images/ja/topics4/hukidashi.png);
+    background-repeat: no-repeat;
 }
 
 ul#articles_detail li img
