topics4 articles_detail test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6952 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -7,7 +7,7 @@ p#lead
 
 ul#articles_title
 {
-    margin: 0px 10px 10px 0px;
+    margin: 0px 10px 10px -15px;
     padding: 100px 0px 120px 30px;
     width: 960px;
     background-image: url("../../images/ja/topics4/background1.png");
@@ -119,4 +119,5 @@ ul#articles_detail li img
 {
     float: left;
     margin-left: -70px;
+    max-width: 200px;
 }
