--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -74,7 +74,7 @@ ul#articles_detail
     display: none;
     position: relative;
     top: -145px;
-    padding-top: 100px;
+    padding: 100px 10px 10px 10px;
     margin-right: 30px;
     background-image: url("../../images/ja/topics4/background2.png");
     background-repeat: no-repeat;
