topics4 articles_detail test
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@6955 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -70,7 +70,7 @@ ul#articles_title li a *
 
 ul#articles_detail
 {
-    width: 740px;
+    width: 941px;
     display: none;
     position: relative;
     top: -145px;
@@ -78,7 +78,7 @@ ul#articles_detail
     margin-right: 30px;
     background-image: url("../../images/ja/topics4/background2.png");
     background-repeat: no-repeat;
-    background-position: top right;
+    background-position: top left;
 }
 
 ul#articles_deatil:after
