--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -7,7 +7,7 @@ p#lead
 
 ul#articles_title
 {
-    margin: 0px 10px 10px -20px;
+    margin: 0px 10px 10px -23px;
     padding: 100px 0px 120px 30px;
     width: 960px;
     background-image: url("../../images/ja/topics4/background1.png");
@@ -75,10 +75,10 @@ ul#articles_detail
     position: relative;
     top: -145px;
     padding: 100px 10px 10px 10px;
-    margin-right: 30px;
+    margin-left: -23px;
     background-image: url("../../images/ja/topics4/background2.png");
     background-repeat: no-repeat;
-    background-position: top right;
+    background-position: top left;
 }
 
 ul#articles_deatil:after
