--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -70,13 +70,13 @@ ul#articles_title li a *
 
 ul#articles_detail
 {
-    width: 920px;
+    width: 900px;
     display: none;
     position: relative;
     top: -45px;
+    left: -20px;
     padding: 25px 20px 20px 20px;
-    margin-left: -30px;
-    background-color: #FAFAFF;
+    background-color: #F0F0FF;
 }
 
 ul#articles_detail:after
@@ -109,7 +109,7 @@ ul#articles_detail li p.comment
 {
     width: 280px;
     height: 186px;
-    padding: 45px 25px 20px 20px;
+    padding: 46px 25px 18px 22px;
     background-image: url(../../images/ja/topics4/hukidashi.png);
     background-repeat: no-repeat;
 }
