--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -76,7 +76,9 @@ ul#articles_detail
     top: -95px;
     left: -20px;
     padding: 25px 20px 20px 20px;
-    background-color: #F0F0FF;
+    background-image: url("../../images/ja/topics4/background2.png");
+    background-repeat: no-repeat;
+
 }
 
 ul#articles_detail:after
@@ -84,6 +86,14 @@ ul#articles_detail:after
      content: "";
      display: block;
      clear: both; 
+}
+
+ul#articles_detail li
+{
+    background-color: #FDFDFF;
+    position: relative;
+    top: 20px;
+    left: 10px;
 }
 
 ul#articles_detail li h1
@@ -101,8 +111,8 @@ ul#articles_detail li p.abst
 {
     width:440px;
     height: 471px;
-    float: left; 
-    padding: 15px 100px 20px 10px;
+   /* float: left; */
+    padding: 15px 80px 20px 10px;
     margin: 10px;
     background-image: url(../../images/ja/topics4/paper.png);
     background-repeat: no-repeat;
