--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -111,7 +111,7 @@ ul#articles_detail li p.abst
 {
     width: 350px;
     height: 381px;
-   /* float: left; */
+    float: left;
     padding: 15px 80px 20px 10px;
     margin: 10px;
     background-image: url(../../images/ja/topics4/paper.png);
