--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -13,7 +13,7 @@ p#lead
 
 ul#articles_title
 {
-    margin: 0px 0px 10px -50px;
+    margin: 0px 0px 10px -52px;
     padding: 100px 0px 120px 30px;
     width: 960px;
     background-image: url("../../images/ja/topics4/background1.png");
@@ -96,7 +96,7 @@ ul#articles_detail li:after
 
 ul#articles_detail li
 {
-    background-color: #FBFBFF;
+    background-color: #F9F9FF;
     position: relative;
     top: 80px;
     left: 30px;
