topics4 title_a block
git-svn-id: file:///ocw/svn/design-rep/ocw-design/branches/2010@7034 0cb0e2da-76ef-49b7-9531-4241df5af7e9

--- a/css/topics/4.css
+++ b/css/topics/4.css
@@ -36,6 +36,7 @@ ul#articles_title li
 
 ul#articles_title li a
 {
+    display: block;
     width: 400px;
     height: 85px;
     padding-left: 30px;
